[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'foxglove/version.py'

[tool.hatch.build]
packages = ['foxglove']

[project]
name = 'foxglove-web'
description = 'Tools for FastAPI'
authors = [{name = 'Samuel Colvin', email = 's@muelcolvin.com'}]
license = {file = 'LICENSE'}
readme = 'README.md'
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: MacOS X',
    'Topic :: Internet',
]
requires-python = '>=3.8'
dependencies = [
    'aiodns>=3.0.0',
    'arq>=0.23',
    'asyncpg>=0.23.0',
    'bcrypt>=4.0.1',
    'buildpg>=0.3.0',
    'fastapi>=0.101.0',
    'httpx>=0.21.1',
    'itsdangerous>=1.1.0',
    'pydantic-settings>=2.0.2',
    'pydantic>=2.1.1',
    'sentry-sdk>=1',
    'typer>=0.3.2',
    'uvicorn>=0.13.3',
]
optional-dependencies = { extra = [
    'ipython>=7.7.0',
    'watchgod>=0.6',
    'aiohttp>=3.6.2',
    'aiodns>=2.0.0',
    'requests>=2.24.0',
    'bcrypt>=3.2.0',
] }
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/samuelcolvin/foxglove'
Funding = 'https://github.com/sponsors/samuelcolvin'
Source = 'https://github.com/samuelcolvin/foxglove'
Changelog = 'https://github.com/samuelcolvin/foxglove/releases'

[tool.pytest.ini_options]
testpaths = 'tests'
timeout = 5
asyncio_mode = 'auto'
filterwarnings = [
    'error',
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning"
]

[tool.flake8]
max_line_length = 120
max_complexity = 14
inline_quotes = 'single'
multiline_quotes = 'double'
ignore = ['E203', 'W503']

[tool.coverage.run]
source = ['foxglove']
branch = true
# TODO test this one day
omit = [
    'foxglove/devtools.py',
    'foxglove/testing.py',
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'raise NotImplemented',
    'if TYPE_CHECKING:',
    '@overload',
]


[tool.coverage.paths]
source = ['foxglove/']

[tool.black]
color = true
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
line_length = 120
known_first_party = 'foxglove'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
